@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.airlift</groupId>
         <artifactId>airbase</artifactId>
-        <version>153</version>
+        <version>156</version>
     </parent>
 
     <artifactId>airlift</artifactId>
@@ -91,7 +91,6 @@
 
         <dep.airlift.version>247-SNAPSHOT</dep.airlift.version>
         <dep.bouncycastle.version>1.78</dep.bouncycastle.version>
-        <dep.bytebuddy.version>1.14.13</dep.bytebuddy.version>
         <dep.modernizer.version>2.7.0</dep.modernizer.version>
         <dep.packaging.version>${dep.airlift.version}</dep.packaging.version>
         <dep.jersey.version>3.1.6</dep.jersey.version>
@@ -295,25 +294,6 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-jackson</artifactId>
                 <version>${dep.jjwt.version}</version>
-            </dependency>
-
-            <!-- TODO: move to airbase -->
-            <dependency>
-                <groupId>jakarta.servlet</groupId>
-                <artifactId>jakarta.servlet-api</artifactId>
-                <version>6.0.0</version>
-            </dependency>
-
-            <dependency>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy</artifactId>
-                <version>${dep.bytebuddy.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy-agent</artifactId>
-                <version>${dep.bytebuddy.version}</version>
             </dependency>
 
             <dependency>
